--- a/musics.html
+++ b/musics.html
@@ -45,12 +45,18 @@
 
 
     function parseResult(result) {
-        const json = JSON.parse(result);
+        let json;
+        if (typeof result === 'string') {
+            json = JSON.parse(result);
+        } else {
+            json = result;
+        }
+        // const json = JSON.parse(result);
         musicList = json;
         let string = "";
         for (let i = 0; i<json.length; ++i) {
             string += "<li src=\""+json[i].url ;
-            string += "\" onclick=\"play(this)\" data-position="+i+">"+json[i].name+"<\/li>";
+            string += "\" onclick=\"play(this)\" data-position="+i+">"+json[i].title+"<\/li>";
         }
         musicListView.innerHTML = string;
 
@@ -71,34 +77,30 @@
     // loadXMLDoc();//加载远程数据
 
     // 本地测试数据
-    parseResult("[" +
-        "{\"url\":\"./musics/菊次郎的夏天.mp3\",\"type\":\"music\",\"name\":\"菊次郎的夏天.mp3\"}," +
-        "{\"url\":\"./musics/儿时的夏日.mp3\",\"type\":\"music\",\"name\":\"儿时的夏日.mp3\"}," +
-    "{\"url\":\"./musics/故宫的记忆.mp3\",\"type\":\"music\",\"name\":\"故宫的记忆.mp3\"}," +
-    "{\"url\":\"./musics/秋天里的深蓝.mp3\",\"type\":\"music\",\"name\":\"秋天里的深蓝.mp3\"}," +
-    "{\"url\":\"./musics/俞灏明-爱的华尔兹.mp3\",\"type\":\"music\",\"name\":\"俞灏明-爱的华尔兹.mp3\"}," +
-    "{\"url\":\"./musics/SongTaste-月下独酌.mp3\",\"type\":\"music\",\"name\":\"SongTaste-月下独酌.mp3\"}," +
-    "{\"url\":\"./musics/梅雨西子-夜明.mp3\",\"type\":\"music\",\"name\":\"梅雨西子-夜明.mp3\"}," +
-    "{\"url\":\"./musics/被遗弃的土豆-吹箫人去玉楼空.wav\",\"type\":\"music\",\"name\":\"被遗弃的土豆-吹箫人去玉楼空.wav\"}," +
-    "{\"url\":\"./musics/晴天的周末在去学校的路上遇见喜欢的人.mp3\",\"type\":\"music\",\"name\":\"晴天的周末在去学校的路上遇见喜欢的人.mp3\"}," +
-    "{\"url\":\"./musics/宗次郎-いつも何度でも.mp3\",\"type\":\"music\",\"name\":\"宗次郎-いつも何度でも.mp3\"}," +
-    "{\"url\":\"./musics/ThePianoGuys-LoveStory.mp3\",\"type\":\"music\",\"name\":\"ThePianoGuys-LoveStory.mp3\"}," +
-    "{\"url\":\"./musics/Hea2t-盛夏与蝉鸣.mp3\",\"type\":\"music\",\"name\":\"Hea2t-盛夏与蝉鸣.mp3\"}," +
-    "{\"url\":\"./musics/卡农(钢琴曲).mp3\",\"type\":\"music\",\"name\":\"卡农(钢琴曲).mp3\"}," +
-    "{\"url\":\"./musics/天箫吟唱-飞越彩虹.mp3\",\"type\":\"music\",\"name\":\"天箫吟唱-飞越彩虹.mp3\"}," +
-    "{\"url\":\"./musics/宗次郎-故乡的原风景.mp3\",\"type\":\"music\",\"name\":\"宗次郎-故乡的原风景.mp3\"}" +
+    // parseResult("[" +
+    //     "{\"url\":\"./musics/菊次郎的夏天.mp3\",\"type\":\"music\",\"title\":\"菊次郎的夏天.mp3\"}," +
+    //     "{\"url\":\"./musics/儿时的夏日.mp3\",\"type\":\"music\",\"title\":\"儿时的夏日.mp3\"}," +
+    // "{\"url\":\"./musics/故宫的记忆.mp3\",\"type\":\"music\",\"title\":\"故宫的记忆.mp3\"}," +
+    // "{\"url\":\"./musics/秋天里的深蓝.mp3\",\"type\":\"music\",\"title\":\"秋天里的深蓝.mp3\"}," +
+    // "{\"url\":\"./musics/俞灏明-爱的华尔兹.mp3\",\"type\":\"music\",\"title\":\"俞灏明-爱的华尔兹.mp3\"}," +
+    // "{\"url\":\"./musics/SongTaste-月下独酌.mp3\",\"type\":\"music\",\"title\":\"SongTaste-月下独酌.mp3\"}," +
+    // "{\"url\":\"./musics/梅雨西子-夜明.mp3\",\"type\":\"music\",\"title\":\"梅雨西子-夜明.mp3\"}," +
+    // "{\"url\":\"./musics/被遗弃的土豆-吹箫人去玉楼空.wav\",\"type\":\"music\",\"title\":\"被遗弃的土豆-吹箫人去玉楼空.wav\"}," +
+    // "{\"url\":\"./musics/晴天的周末在去学校的路上遇见喜欢的人.mp3\",\"type\":\"music\",\"title\":\"晴天的周末在去学校的路上遇见喜欢的人.mp3\"}," +
+    // "{\"url\":\"./musics/宗次郎-いつも何度でも.mp3\",\"type\":\"music\",\"title\":\"宗次郎-いつも何度でも.mp3\"}," +
+    // "{\"url\":\"./musics/ThePianoGuys-LoveStory.mp3\",\"type\":\"music\",\"title\":\"ThePianoGuys-LoveStory.mp3\"}," +
+    // "{\"url\":\"./musics/Hea2t-盛夏与蝉鸣.mp3\",\"type\":\"music\",\"title\":\"Hea2t-盛夏与蝉鸣.mp3\"}," +
+    // "{\"url\":\"./musics/卡农(钢琴曲).mp3\",\"type\":\"music\",\"title\":\"卡农(钢琴曲).mp3\"}," +
+    // "{\"url\":\"./musics/天箫吟唱-飞越彩虹.mp3\",\"type\":\"music\",\"title\":\"天箫吟唱-飞越彩虹.mp3\"}," +
+    // "{\"url\":\"./musics/宗次郎-故乡的原风景.mp3\",\"type\":\"music\",\"title\":\"宗次郎-故乡的原风景.mp3\"}" +
 
-        "]");
+    //     "]");
 
-
-    let playTimeOut;
 
     function playCurrent(position) {
         if (currentPosition === position) {
             return
         }
-
-        clearTimeout(playTimeOut);
 
         audioView.src = musicList[position].url;
 
@@ -118,6 +120,14 @@
     audioView.onended = function(){
         playNext();
     }
+</script>
+
+<script type="text/javascript" src="./js/getRequest.js"></script>
+<script type="text/javascript">
+    getRequest("https://divaid.github.io/htmlminifuncs/jsondata/musices", "", function(res){
+        // console.log(JSON.parse(res).data)
+        parseResult(JSON.parse(res).data)
+    })
 </script>
 </body>
 </html>
