--- a/webMovies.html
+++ b/webMovies.html
@@ -13,49 +13,62 @@
             text-decoration: none;
             color: #0033FF;
         }
+        #movies_parent{
+            list-style-type: none;
+            padding:0;
+        }
     </style>
 
     <script src="js/request.js"></script>
 </head>
 <body>
-<ol id="movies_parent">
-</ol>
+<ul id="movies_parent">
+</ul>
 
 <script>
     const listView = document.getElementById("movies_parent");
 
-    const data = [
-        {"title": "我和我的祖国", "url": "https://v.pptv.com/show/cHv0c9tBse9S0Dg.html"},
-        {"title": "机器侠", "url": "https://v.pptv.com/show/eL6zMZnicb60QjvY.html?rcc_id=wap_033"},
-        {"title": "集结号", "url": "http://m.rr.tv/detail/17780?snum=1"},
-        {"title": "十二生肖", "url": "https://m.rr.tv/detail/17648?snum=1"},
-        {"title": "机器之血", "url": "http://m.rr.tv/detail/17704?snum=1"},
-        {"title": "缝纫机乐队", "url": "https://v.pptv.com/show/7XdNyjKYCEapJ48.html"},
-        {"title": "巧奔妙逃", "url": "https://v.pptv.com/show/iclHpZs40pOJFwys.html"},
-        {"title": "姜子牙", "url": "https://v.pptv.com/show/Nfh39FzCMnDTUbk.html"},
-        {"title": "胖子行动队", "url": "https://v.pptv.com/show/qnj1ctpAsO5Rzzc.html"},
-        {"title": "追凶者也", "url": "http://m.rr.tv/detail/17727?snum=1"},
-        {"title": "大明劫", "url": "http://m.rr.tv/detail/35018?snum=1"},
-{"title": "人在囧途", "url": "http://m.rr.tv/detail/34987?snum=1"},
-{"title": "万万没想到", "url": "http://m.rr.tv/detail/17729?snum=1"},
+    var data = [
+//         {"title": "我和我的祖国", "url": "https://v.pptv.com/show/cHv0c9tBse9S0Dg.html"},
+//         {"title": "机器侠", "url": "https://v.pptv.com/show/eL6zMZnicb60QjvY.html?rcc_id=wap_033"},
+//         {"title": "集结号", "url": "http://m.rr.tv/detail/17780?snum=1"},
+//         {"title": "十二生肖", "url": "https://m.rr.tv/detail/17648?snum=1"},
+//         {"title": "机器之血", "url": "http://m.rr.tv/detail/17704?snum=1"},
+//         {"title": "缝纫机乐队", "url": "https://v.pptv.com/show/7XdNyjKYCEapJ48.html"},
+//         {"title": "巧奔妙逃", "url": "https://v.pptv.com/show/iclHpZs40pOJFwys.html"},
+//         {"title": "姜子牙", "url": "https://v.pptv.com/show/Nfh39FzCMnDTUbk.html"},
+//         {"title": "胖子行动队", "url": "https://v.pptv.com/show/qnj1ctpAsO5Rzzc.html"},
+//         {"title": "追凶者也", "url": "http://m.rr.tv/detail/17727?snum=1"},
+//         {"title": "大明劫", "url": "http://m.rr.tv/detail/35018?snum=1"},
+// {"title": "人在囧途", "url": "http://m.rr.tv/detail/34987?snum=1"},
+// {"title": "万万没想到", "url": "http://m.rr.tv/detail/17729?snum=1"},
 
-        {"title": "捉妖记", "url": "http://m.rr.tv/detail/17642?snum=1"},
-        {"title": "拆弹专家", "url": "http://m.rr.tv/detail/35301?snum=1"},
-        {"title": "叶问", "url": "http://m.rr.tv/detail/34990?snum=1"},
-        {"title": "摩登时代", "url": "https://www.wasu.cn/wap/Play/show/id/9758995?refer=sm.cn"},
-        {"title": "淘金记", "url": "https://www.wasu.cn/wap/play/show/id/9759053"},
-        {"title": "战狼", "url": "https://v.pptv.com/show/EuKeHYXrW5n8euI.html"},
+//         {"title": "捉妖记", "url": "http://m.rr.tv/detail/17642?snum=1"},
+//         {"title": "拆弹专家", "url": "http://m.rr.tv/detail/35301?snum=1"},
+//         {"title": "叶问", "url": "http://m.rr.tv/detail/34990?snum=1"},
+//         {"title": "摩登时代", "url": "https://www.wasu.cn/wap/Play/show/id/9758995?refer=sm.cn"},
+//         {"title": "淘金记", "url": "https://www.wasu.cn/wap/play/show/id/9759053"},
+//         {"title": "战狼", "url": "https://v.pptv.com/show/EuKeHYXrW5n8euI.html"},
     ];
 
-    let innerString = "";
-    for(let i =0; i<data.length; ++i){
-        innerString+= "<li><a href=\""+data[i].url+"\" target=\"_blank\">"+data[i].title+"</a></li>"
+    function parseResult(){
+        let innerString = "";
+        for(let i =0; i<data.length; ++i){
+            innerString+= "<li><a href=\""+data[i].url+"\" target=\"_blank\">"+(i + 1)+"."+data[i].title+"</a></li>"
+        }
+
+        listView.innerHTML = innerString;
     }
+</script>
 
-    listView.innerHTML = innerString;
 
-    getRequest("https://divaid.github.io/htmlminifuncs/data/lives", "", function (res) {
-        console.log(res)
+
+<script type="text/javascript" src="./js/getrequest.js"></script>
+<script type="text/javascript">
+    getRequest("https://divaid.github.io/htmlminifuncs/jsondata/movies", "", function(res){
+        // console.log(JSON.parse(res).data)
+        data = JSON.parse(res).data
+        parseResult()
     })
 </script>
 </body>
