修改引入错误

--- a/liveVideo.html
+++ b/liveVideo.html
@@ -469,7 +469,7 @@
 
 
 
-<script type="text/javascript" src="./js/getRequest.js"></script>
+<script type="text/javascript" src="./js/getrequest.js"></script>
 <script type="text/javascript">
     getRequest("https://divaid.github.io/htmlminifuncs/jsondata/liveshows", "", function(res){
         // console.log(JSON.parse(res).data)
