修改路径名称

--- a/pdfreader/web/viewer.html
+++ b/pdfreader/web/viewer.html
@@ -58,7 +58,7 @@ See https://github.com/adobe-type-tools/cmap-resources
         console.log(getParam("url"))
     </script>
 
-<script src="../build/pdf.js"></script>
+<script src="../pdfbuild/pdf.js"></script>
 
 
   <script src="viewer.js"></script>
