添加电视剧

--- a/tvs.html
+++ b/tvs.html
@@ -46,13 +46,15 @@
 
         {"title": "大宋提刑官", "url": "https://tv.cctv.com/2009/11/28/VIDE1355686293956623.shtml?spm=C55853485115.PN6hjciJxJ1y.0.0"},
 
-        {"title": "神探狄仁杰", "url": "https://tv.cctv.com/2010/01/08/VIDE1354264601268382.shtml?spm=C55853485115.PN6hjciJxJ1y.0.0"},
-
+        {"title": "神探狄仁杰第一部", "url": "https://tv.cctv.com/2010/01/08/VIDE1354264601268382.shtml?spm=C55853485115.PN6hjciJxJ1y.0.0"},
+        {"title": "神探狄仁杰第二部", "url": "https://tv.cctv.com/2009/12/18/VIDE1355686983321456.shtml?spm=C55853485115.PN6hjciJxJ1y.0.0"},
 
         {"title": "隐秘而伟大", "url": "https://tv.cctv.com/2020/11/07/VIDEuR4FjDuLAAT4GMgCT04A201107.shtml?spm=C55853485115.PYUgfrkuJQyH.0.0"},
         {"title": "大侠霍元甲", "url": "https://tv.cctv.com/2020/07/30/VIDENP4lMhbRoKQBXg8kwBtC200730.shtml?spm=C55853485115.PHWZqslic5c7.0.0"},
         {"title": "三八线", "url": "https://tv.cctv.com/2016/08/12/VIDE7puZXORVMACsRfRsMalk160812.shtml?spm=C55853485115.Pbqb0ldQ5nlz.0.0"},
-        {"title": "西游记续集", "url": "https://tv.cctv.com/2014/07/31/VIDE1406773645707165.shtml?spm=C55853485115.PN6hjciJxJ1y.0.0"}
+        {"title": "西游记续集", "url": "https://tv.cctv.com/2014/07/31/VIDE1406773645707165.shtml?spm=C55853485115.PN6hjciJxJ1y.0.0"},
+        {"title": "大宅门", "url": "https://tv.cctv.com/2009/12/27/VIDE1355679007980264.shtml?spm=C55853485115.PhPcBCVf4H0G.0.0"},
+        {"title": "走西口", "url": "https://tv.cctv.com/2009/12/23/VIDE1354527830268789.shtml?spm=C55853485115.PYUgfrkuJQyH.0.0"}
     ];
 
     let innerString = "";
@@ -61,10 +63,6 @@
     }
 
     listView.innerHTML = innerString;
-
-    getRequest("https://divaid.github.io/htmlminifuncs/data/lives", "", function (res) {
-        console.log(res)
-    })
 </script>
 </body>
 </html>
