--- a/calculator.html
+++ b/calculator.html
@@ -3,9 +3,15 @@
 1.添加结果连续运算逻辑
 2.添加数字运算显示
 3.四舍五入保留两位小数（消除精度丢失影响）
+
+v3.0
+1.适配移动端
  -->
 <html>
 <head>
+	<meta name="viewport"
+          content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+
 	<style>
 		.result_parent{
 			background-color: white;
