--- a/calculator.html
+++ b/calculator.html
@@ -11,6 +11,7 @@ v3.0
 <head>
 	<meta name="viewport"
           content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+    	<meta charset="UTF-8">
 
 	<style>
 		.result_parent{
